--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.8.0",
     "react-jss": "^10.10.0",
     "react-rotating-text": "^1.4.1",
     "styled-components": "^5.3.6"
