--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^5.11.0",
+    "babel-plugin-styled-components": "^2.1.3",
+    "gatsby": "5.11.0",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-jss": "^5.11.0",
     "gatsby-plugin-manifest": "^5.11.0",
-    "gatsby-plugin-netlify-cms": "^5.8.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
@@ -28,12 +27,12 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.9.0",
-    "react-jss": "^10.10.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
+    "react-icons": "4.9.0",
+    "react-jss": "10.10.0",
     "react-rotating-text": "^1.4.1",
-    "styled-components": "^6.0.0-rc.3"
+    "styled-components": "5.3.11"
   }
 }
