--- a/Dockerfile.dev.yml
+++ b/Dockerfile.dev.yml
@@ -1,5 +1,7 @@
 FROM node:alpine
 
+LABEL Caglar Yalcin <caglaryalcin.com>
+
 EXPOSE 8000
 
 RUN \
@@ -14,7 +16,7 @@ RUN apk add automake autoconf libtool nasm
 RUN npm install -g gatsby-cli
 
 WORKDIR /app
-COPY ./package.json .
-RUN yarn install && yarn cache clean
 COPY . .
+RUN yarn install && yarn cache clean
+
 CMD ["yarn", "develop", "-H", "0.0.0.0" ]
