--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/ubuntu": "^5.0.3",
     "babel-plugin-styled-components": "^2.1.3",
     "gatsby": "5.11.0",
     "gatsby-plugin-image": "^3.11.0",
