--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fontsource/ubuntu": "^5.0.3",
+    "@fontsource/cascadia-code": "^4.2.1",
+    "@fontsource/source-code-pro": "^5.0.16",
     "babel-plugin-styled-components": "^2.1.3",
     "gatsby": "5.11.0",
     "gatsby-plugin-image": "^3.11.0",
@@ -34,7 +35,7 @@
     "react-icons": "4.9.0",
     "react-jss": "10.10.0",
     "react-rotating-text": "^1.4.1",
-    "styled-components": "5.3.11",
-    "typeface-ubuntu": "^1.1.13"
+    "source-code-pro": "^2.38.0",
+    "styled-components": "5.3.11"
   }
 }
