--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caglaryalcin.com",
-  "version": "1.0.1",
+  "version": "2.0.1",
   "private": true,
   "description": "",
   "author": "Caglar Yalcin",
@@ -19,6 +19,7 @@
     "@fontsource/source-code-pro": "^5.0.16",
     "babel-plugin-styled-components": "^2.1.3",
     "gatsby": "5.11.0",
+    "gatsby-cli": "^5.13.1",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-jss": "^5.11.0",
     "gatsby-plugin-manifest": "^5.11.0",
