--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fontsource/cascadia-code": "^4.2.1",
     "@fontsource/source-code-pro": "^5.0.16",
     "babel-plugin-styled-components": "^2.1.3",
-    "gatsby": "5.11.0",
+    "gatsby": "^5.14.0",
     "gatsby-cli": "^5.13.3",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-jss": "^5.11.0",
@@ -30,6 +30,7 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
