--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
       - name: docker image push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/caglaryalcin.com:latest
 
-      - name: GitHub Container Registry login
+      - name: github login
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: GHCR için imajı tagle
+      - name: ghcr image tag
         run: docker tag ${{ secrets.DOCKER_USERNAME }}/caglaryalcin.com:latest ghcr.io/${{ github.repository_owner }}/caglaryalcin.com:latest
 
-      - name: GHCR'a push et
+      - name: ghcr push
         run: docker push ghcr.io/${{ github.repository_owner }}/caglaryalcin.com:latest
